--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -25,11 +25,11 @@
  */
  @font-face {
   font-family: 'FontAwesome';
-  src:url('fontawesome-webfont.eot?v=3.2.1');
-  src:url('fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'),
-    url('fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg'),
-    url('fontawesome-webfont.woff?v=3.2.1') format('woff'),
-    url('fontawesome-webfont.ttf?v=3.2.1') format('truetype');
+  src:url('<%= asset_path('fontawesome-webfont.eot?v=3.2.1') %>');
+  src:url('<%= asset_path('fontawesome-webfont.eot?#iefix&v=3.2.1') %>') format('embedded-opentype'),
+    url('<%= asset_path('fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') %>') format('svg'),
+    url('<%= asset_path('fontawesome-webfont.woff?v=3.2.1') %>') format('woff'),
+    url('<%= asset_path('fontawesome-webfont.ttf?v=3.2.1') %>') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
